--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "npm run lint && npm run unit",
     "build": "babel src -d build --ignore '**/*.test.js' && cp src/*.json build",
     "start": "node build/server.js",
-    "start-local": "babel-node -r node_modules/dotenv/config src/server.js"
+    "start:local": "babel-node -r dotenv/config src/server.js"
   },
   "repository": {
     "type": "git",
